# umash-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: hasher.rs  lib.rs  main.rs
