[package]
name = "umash"
version = "0.5.0"
authors = ["Backtrace I/O <team@backtrace.io>"]
edition = "2018"
license = "MIT"
description = "Idiomatic API for the umash hash/fingerprint function"
keywords = ["hash", "fingerprint", "umash"]
categories = ["api-bindings"]
repository = "https://github.com/backtrace-labs/umash-rs"

[dependencies]
getrandom = "0.2"
umash-sys = "0.3"
